[package]
name = "swiss-climate-monitoring"
version = "0.1.0"
authors = ["Sulaiman Ghori <sulaiman.ghori@outlook.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
esp-idf-hal = "0.38.1"
esp-idf-svc = "0.42.1"
embedded-hal = "0.2.7"
dht-sensor = "0.2.1"
log = "0.4.17"
embedded-svc = "0.22.1"
embedded-graphics = "0.7.1"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
anyhow = "1"
[build-dependencies]
embuild = "0.30"
anyhow = "1"
